# autenticacao.gov

./: README.md  license.txt
pteid-mw-pt/_src/eidmw/: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CheckFilesMwRelease.bat  SetPath7zip.bat  SetPathDoxygen.bat  SetPathMsm.bat  SetPathOpenssl098g.bat  SetPathPSdk2003.bat  SetPathQt450_Dynamic.bat  SetPathQt450_Static.bat  SetPathSwig.bat  SetPathVs2005.bat  SetPathWix.bat  SetPathXerces310.bat  build-flatpak.sh  build_eidmw_sdk_linux.sh  config.status  configure  configure_caixamagica.sh  configure_debian.sh  configure_fedora.sh  configure_gentoo.sh  configure_mac.sh  configure_suse.sh  create_java_wrappar_jnilib.sh  crossplatform.md  eidmw.pro  news.json  prepareDebianSourcePkg.sh  preparePKG.sh  pt.gov.autenticacao.metainfo.xml  pt.gov.autenticacao.yml  pteid-mw.pro  pteid-mw.spec  pteidlinuxversion.pl  release_data  release_data.h  run_swig.sh  (+5 more)
pteid-mw-pt/_src/eidmw/CMD/: CMD.workspace  CMDServices.pro  CMD_test.cbp  CMD_test.cpp  CMDtest.cpp  Makefile  PDFSignatureCli.cpp  PDFSignatureCli.h  cmdTest.cbp  cmdTest.cpp  tst_Makefile
pteid-mw-pt/_src/eidmw/CSP/: cspdefines.h  csputil.cpp  pteid35CSP.vcproj  pteid35CSP_VS2008.vcproj  pteidCSP.2008.vcproj  pteidCSP.rc  pteidCSP.vcproj  pteidcsp.def  pteidlib.def
pteid-mw-pt/_src/eidmw/CSPTest/: pteid35CSPTest.vcproj  pteidCSPTest.vcproj
pteid-mw-pt/_src/eidmw/FreeImagePTEiD/: FreeImage.2003.vcproj  FreeImage.2005.sln  FreeImage.2005.vcproj  FreeImage.2008.sln  FreeImage.2008.vcproj  FreeImage.2013.vcxproj  FreeImage.2013.vcxproj.filters  FreeImage.rc  Makefile  Makefile.cygwin  Makefile.gnu  Makefile.iphone  Makefile.osx  Makefile.solaris  Makefile.srcs  README.minGW  Whatsnew.txt  clean.bat  clean.sh  genfipsrclist.sh  gensrclist.sh
pteid-mw-pt/_src/eidmw/PTeIDWin32CertificateImport/: PTeIDWin32CertificateImport.sln
pteid-mw-pt/_src/eidmw/_Builds/: Autenticacao.gov.sln  Makefile_mac  PteidEasyBuild.2008.sln  PteidEasyBuild.sln  PteidEasyBuildSdk.sln  PteidEasyBuild_VS2008.sln  eidcommon.mak  pteidversions.h  pteidversions.mak  sign_msi.bat  versions.readme
pteid-mw-pt/_src/eidmw/acsccid-1.0.3/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  acsccid-1.0.3.pro  bootstrap  config.h.in  configure  configure.ac
pteid-mw-pt/_src/eidmw/applayer/: APLCCXmlDoc.h  APLCard.cpp  APLCard.h  APLCardAuthenticationKey.cpp  APLCardAuthenticationKey.h  APLCardFile.h  APLCardPteid.cpp  APLCardPteid.h  APLCardSIS.cpp  APLCardSIS.h  APLCertif.cpp  APLCertif.h  APLConfig.cpp  APLConfig.h  APLCrypto.cpp  APLCrypto.h  APLDoc.cpp  APLDoc.h  APLPublicKey.cpp  APLPublicKey.h  APLReader.cpp  APLReader.h  AttributeFactory.cpp  AttributeFactory.h  CMakeLists.txt  CRLFetcher.cpp  CRLFetcher.h  CRLService.cpp  CardFile.cpp  CardFile.h  CardPteid.cpp  CardPteid.h  CardPteidAddr.h  CardPteidDef.h  CardSISDef.h  CertStatusCache.cpp  CertStatusCache.h  CurlProxy.cpp  CurlUtil.cpp  CurlUtil.h  (+114 more)
pteid-mw-pt/_src/eidmw/applayerEmulation/: applayerEmulation.pro  pteid35applayerEmulation.vcproj  pteidapplayerEmulation.vcproj
pteid-mw-pt/_src/eidmw/applayerTest/: APLCardPteidTest.cpp  APLCardSISTest.cpp  APLCertifTest.cpp  APLCryptoTest.cpp  APLReaderTest.cpp  CRLServiceTest.cpp  CertStatusCacheTest.cpp  applayerTest.pro  cryptoFwkPteidTest.cpp  pteid35applayerTest.vcproj  pteidapplayerTest.vcproj
pteid-mw-pt/_src/eidmw/cardlayer/: ACR83Pinpad.cpp  ACR83Pinpad.h  APDU.cpp  APDU.h  BacAuthentication.cpp  BacAuthentication.h  CMakeLists.txt  Cache.cpp  Cache.h  Card.cpp  Card.h  CardFactory.cpp  CardFactory.h  CardLayer.cpp  CardLayer.h  CardLayerConst.h  CardReaderInfo.cpp  CardReaderInfo.h  ChipAuthentication.cpp  ChipAuthentication.h  Context.cpp  Context.h  FciData.cpp  FciData.h  GempcPinpad.cpp  GempcPinpad.h  GenericPinpad.cpp  GenericPinpad.h  IcaoCard.cpp  IcaoCard.h  InternalConst.h  MultiPassCard.cpp  MultiPassCard.h  P15Correction.cpp  P15Correction.h  P15Objects.h  PCSC.cpp  PCSC.h  PKCS15.cpp  PKCS15.h  (+35 more)
pteid-mw-pt/_src/eidmw/cardlayerEmulation/: cardlayerEmulation.pro  pteid35cardlayerEmulation.vcproj  pteidcardlayerEmulation.vcproj  readme.txt
pteid-mw-pt/_src/eidmw/cardlayerTool/: Makefile  cardlayerTool.pro  cardlayertool.cpp  dumpcontents.cpp  pteid35cardlayerTool.vcproj  pteidcardlayerTool.vcproj  testcardlayer.cpp
pteid-mw-pt/_src/eidmw/clean_cache_directory/: clean_cache_directory.cpp  clean_cache_directory.vcxproj  clean_cache_directory.vcxproj.filters
pteid-mw-pt/_src/eidmw/clean_mdrv_keys/: delete_keys.cpp  delete_keys_if.2008.vcproj  delete_keys_if.2008.vcxproj  delete_keys_if.2008.vcxproj.filters  delete_keys_if.vcproj
pteid-mw-pt/_src/eidmw/cmd-ksp/: CMDKeyStorageProvider.sln
pteid-mw-pt/_src/eidmw/common/: ByteArray.cpp  ByteArray.h  ByteArrayReader.cpp  ByteArrayReader.h  CMakeLists.txt  Config.cpp  Config.h  ConfigCommon.cpp  ConfigReg.cpp  Crypto.cpp  Crypto.h  DynamicLib.cpp  DynamicLib.h  Export.h  Hash.cpp  Hash.h  Log.cpp  Log.h  LogBase.cpp  LogBase.h  MWException.cpp  MWException.h  Mutex.cpp  Mutex.h  MyriadFontGlyphWidths.cpp  MyriadFontGlyphWidths.h  OSUtil.h  PhotoPteid.h  StringOps.cpp  StringOps.h  TLV.cpp  TLV.h  TLVBuffer.cpp  TLVBuffer.h  TLVTagDefinitions.h  Thread.cpp  Thread.h  ThreadDefines.h  Util.cpp  Util.h  (+14 more)
pteid-mw-pt/_src/eidmw/commonTest/: commonTest.pro  pteid35commonTest.vcproj
pteid-mw-pt/_src/eidmw/configure-auxiliar-files/: linux.conf  qmake.conf
pteid-mw-pt/_src/eidmw/crl_unit_test/: crl_unit_test.pro  main.cpp
pteid-mw-pt/_src/eidmw/cryptoAPI-Test/: cryptoAPI-Test.vcxproj  cryptoAPI-Test.vcxproj.filters  signCAPI.cpp
pteid-mw-pt/_src/eidmw/debian/: changelog  control  copyright  pteid-dss.desktop  pteid-mw-gui.desktop  pteid-mw.dirs  pteid-mw.install  pteid-mw.postinst  pteid-mw.postrm  pteid-mw.substvars  rules
pteid-mw-pt/_src/eidmw/dialogs/: countryCallingCodeList.h  dialogs.h  langUtil.cpp  langUtil.h  language.h  language_latin1.h
pteid-mw-pt/_src/eidmw/eidgui/: AutoUpdates.cpp  AutoUpdates.h  CardInformation.cpp  CardInformation.h  ChangeAddressDialog.cpp  ChangeAddressDialog.h  (+52 more)
(+5829 files in other folders)
